--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.2.0",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
