--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.2.0",
     "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.12",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
